[gd_scene load_steps=5 format=2]

[ext_resource path="res://Examples/Paddle/Assets/Themes/Heading.tres" type="DynamicFont" id=1]
[ext_resource path="res://Examples/Paddle/Assets/Themes/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Examples/Paddle/Components/Menus/Button/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Examples/Paddle/Components/Menus/LobbyMenu/LobbyMenu.gd" type="Script" id=4]

[node name="LobbyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 384.0
margin_top = 108.0
margin_right = 640.0
margin_bottom = 492.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
margin_left = 72.0
margin_top = 16.0
margin_right = 184.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "LOBBY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="Panel"]
margin_left = 24.0
margin_top = 56.0
margin_right = 232.0
margin_bottom = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="Panel" instance=ExtResource( 3 )]
margin_left = 183.0
margin_top = 344.0
margin_right = 233.0
margin_bottom = 370.0
disabled = true
text = "START"

[node name="LeaveButton" parent="Panel" instance=ExtResource( 3 )]
margin_left = 24.0
margin_top = 344.0
margin_right = 68.0
margin_bottom = 370.0
text = "LEAVE"
